--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "firebasecrud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "angular": "^1.6.9",
-    "angular-route": "^1.6.9",
-    "bootstrap": "^4.2.1"
-  }
+    "name": "firebasecrud",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Saint Zion",
+    "license": "ISC",
+    "dependencies": {
+        "angular": "^1.6.9",
+        "angular-route": "^1.6.9",
+        "bootstrap": "^4.2.1"
+    }
 }
